--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,6 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RegistroPersona"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Menu/>
+        Title="Menu Principal" Height="450" Width="800">
+    <Menu AutomationProperties.Name="Registro">
+        <MenuItem Header="Registros">
+            <MenuItem Header="Personas"/>
+        </MenuItem>
+    </Menu>
 </Window>
