--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Menu Principal" Height="450" Width="800">
     <Menu AutomationProperties.Name="Registro">
-        <MenuItem Header="Registros">
+        <MenuItem Header="Registros" Click="MenuItem_Click">
             <MenuItem Header="Personas"/>
         </MenuItem>
         <MenuItem Header="Consultas">
