--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,12 +6,17 @@
         xmlns:local="clr-namespace:RegistroPersona"
         mc:Ignorable="d"
         Title="Menu Principal" Height="450" Width="800">
-    <Menu AutomationProperties.Name="Registro">
-        <MenuItem Header="Registros" Click="MenuItem_Click">
-            <MenuItem Header="Personas"/>
-        </MenuItem>
-        <MenuItem Header="Consultas">
-            <MenuItem Header="Personas"/>
-        </MenuItem>
-    </Menu>
+    <DockPanel Height="434">
+        <Menu AutomationProperties.Name="Registro" Width="806">
+            <MenuItem Header="Registros" Click="MenuItem_Click">
+                <MenuItem Header="Personas"/>
+            </MenuItem>
+
+            <MenuItem Header="Consultas">
+                <MenuItem Header="Personas"/>
+            </MenuItem>
+        </Menu>
+
+    </DockPanel>
+
 </Window>
