--- a/UI/Registro/rPersonas.xaml
+++ b/UI/Registro/rPersonas.xaml
@@ -12,23 +12,25 @@
             <RowDefinition Height="0*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="548*"/>
+            <ColumnDefinition Width="243*"/>
         </Grid.ColumnDefinitions>
-        <Label Content="ID" HorizontalAlignment="Left" Margin="24,33,0,0" VerticalAlignment="Top" Height="26" Width="22"/>
-        <Label Content="Nombre" HorizontalAlignment="Left" Margin="24,69,0,0" VerticalAlignment="Top" Height="26" Width="54"/>
-        <Label Content="Telefono" HorizontalAlignment="Left" Margin="26,105,0,0" VerticalAlignment="Top" Height="26" Width="56" RenderTransformOrigin="0.533,-0.665"/>
-        <Label Content="Cedula" HorizontalAlignment="Left" Margin="26,145,0,0" VerticalAlignment="Top" Height="26" Width="47" RenderTransformOrigin="0.319,1.335"/>
-        <Label Content="Direccion" HorizontalAlignment="Left" Margin="26,0,0,0" VerticalAlignment="Center" Height="26" Width="60" RenderTransformOrigin="0.489,-1.204"/>
-        <Label Content="Fecha Nacimiento" HorizontalAlignment="Left" Margin="24,232,0,0" VerticalAlignment="Top" Height="26" Width="105"/>
-        <DatePicker HorizontalAlignment="Left" Margin="134,232,0,0" VerticalAlignment="Top" Height="24" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Margin="134,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="TextBox_TextChanged" Height="18"/>
-        <TextBox HorizontalAlignment="Left" Margin="134,113,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18"/>
-        <TextBox HorizontalAlignment="Left" Margin="134,158,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18"/>
-        <TextBox HorizontalAlignment="Left" Margin="134,197,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18"/>
-        <Button Content="Nuevo" HorizontalAlignment="Left" Margin="87,322,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.555,-0.749" Height="37" Width="71"/>
+        <Label Content="ID" HorizontalAlignment="Left" Margin="26,60,0,0" VerticalAlignment="Top" Height="26" Width="22"/>
+        <Label Content="Nombre" HorizontalAlignment="Left" Margin="26,91,0,0" VerticalAlignment="Top" Height="26" Width="54"/>
+        <Label Content="Telefono" HorizontalAlignment="Left" Margin="23,136,0,0" VerticalAlignment="Top" Height="26" Width="56" RenderTransformOrigin="0.533,-0.665"/>
+        <Label Content="Cedula" HorizontalAlignment="Left" Margin="24,167,0,0" VerticalAlignment="Top" Height="26" Width="47" RenderTransformOrigin="0.319,1.335"/>
+        <Label Content="Direccion" HorizontalAlignment="Left" Margin="26,223,0,0" VerticalAlignment="Top" Height="26" Width="60" RenderTransformOrigin="0.489,-1.204"/>
+        <Label Content="Fecha Nacimiento" HorizontalAlignment="Left" Margin="24,262,0,0" VerticalAlignment="Top" Height="26" Width="105"/>
+        <DatePicker HorizontalAlignment="Left" Margin="134,264,0,0" VerticalAlignment="Top" Height="24" Width="120" AutomationProperties.Name="FechaNacimientoDatePicker"/>
+        <TextBox HorizontalAlignment="Left" Margin="134,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="TextBox_TextChanged" Height="18" AutomationProperties.Name="NombreTextbox"/>
+        <TextBox HorizontalAlignment="Left" Margin="134,145,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18" TextChanged="TextBox_TextChanged_3" AutomationProperties.Name="TelefonoTextbox"/>
+        <TextBox HorizontalAlignment="Left" Margin="134,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18" AutomationProperties.Name="CedulaTextbox"/>
+        <TextBox HorizontalAlignment="Left" Margin="134,227,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18" AutomationProperties.Name="DireccionTextbox"/>
+        <Button Content="Nuevo" HorizontalAlignment="Left" Margin="87,322,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.555,-0.749" Height="37" Width="71" Click="Button_Click_3"/>
         <Button Content="Guardar" HorizontalAlignment="Left" Margin="185,322,0,0" VerticalAlignment="Top" Height="37" Width="81"/>
-        <Button Content="Eliminar" HorizontalAlignment="Left" Margin="294,322,0,0" VerticalAlignment="Top" Width="77" Height="37"/>
-        <Button Content="Buscar" HorizontalAlignment="Left" Margin="294,25,0,0" VerticalAlignment="Top" Height="33" Width="77"/>
+        <Button Content="Eliminar" HorizontalAlignment="Left" Margin="294,322,0,0" VerticalAlignment="Top" Width="77" Height="37" Click="Button_Click_5"/>
+        <Button Content="Buscar" HorizontalAlignment="Left" Margin="294,10,0,0" VerticalAlignment="Top" Height="33" Width="77" Click="Button_Click_4"/>
+        <TextBox HorizontalAlignment="Left" Margin="134,64,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="TextBox_TextChanged_4" AutomationProperties.Name="IdTextBox"/>
 
     </Grid>
 </Window>
